--- a/src/index.css
+++ b/src/index.css
@@ -4,4 +4,9 @@
 
 body {
     font-family: "Ubuntu", sans-serif;
+    @apply bg-magnolia w-full h-screen flex justify-center items-center;
+}
+
+.container-shadow {
+    box-shadow: 0px 25px 40px -20px rgba(0,0,0,9.51%) ;
 }
